--- a/assets/main.css
+++ b/assets/main.css
@@ -31,6 +31,9 @@ html {
     --light-note-block-border-color: #6fab6f;
     --light-note-block-background-color: #e6f4e9;
     --light-note-block-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%236fab6f"><path d="M440-280h80v-240h-80v240Zm40-320q17 0 28.5-11.5T520-640q0-17-11.5-28.5T480-680q-17 0-28.5 11.5T440-640q0 17 11.5 28.5T480-600Zm0 520q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>');
+    --light-tip-block-border-color: #b0a029;
+    --light-tip-block-background-color: #f4f4e6;
+    --light-tip-block-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%23b0a029"><path d="M480-80q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM320-200v-80h320v80H320Zm10-120q-69-41-109.5-110T180-580q0-125 87.5-212.5T480-880q125 0 212.5 87.5T780-580q0 81-40.5 150T630-320H330Zm24-80h252q45-32 69.5-79T700-580q0-92-64-156t-156-64q-92 0-156 64t-64 156q0 54 24.5 101t69.5 79Zm126 0Z"/></svg>');
     --light-todo-block-border-color: #6faba0;
     --light-todo-block-background-color: #e6f4f3;
     --light-todo-block-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%236faba0"><path d="M680-80q-83 0-141.5-58.5T480-280q0-83 58.5-141.5T680-480q83 0 141.5 58.5T880-280q0 83-58.5 141.5T680-80Zm67-105 28-28-75-75v-112h-40v128l87 87Zm-547 65q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h167q11-35 43-57.5t70-22.5q40 0 71.5 22.5T594-840h166q33 0 56.5 23.5T840-760v250q-18-13-38-22t-42-16v-212h-80v120H280v-120h-80v560h212q7 22 16 42t22 38H200Zm280-640q17 0 28.5-11.5T520-800q0-17-11.5-28.5T480-840q-17 0-28.5 11.5T440-800q0 17 11.5 28.5T480-760Z"/></svg>');
@@ -67,6 +70,9 @@ html {
     --dark-note-block-border-color: #6fab76;
     --dark-note-block-background-color: #233025;
     --dark-note-block-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%236fab76"><path d="M440-280h80v-240h-80v240Zm40-320q17 0 28.5-11.5T520-640q0-17-11.5-28.5T480-680q-17 0-28.5 11.5T440-640q0 17 11.5 28.5T480-600Zm0 520q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>');
+    --dark-tip-block-border-color: #a2ab6f;
+    --dark-tip-block-background-color: #2f3023;
+    --dark-tip-block-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%23a2ab6f"><path d="M480-80q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM320-200v-80h320v80H320Zm10-120q-69-41-109.5-110T180-580q0-125 87.5-212.5T480-880q125 0 212.5 87.5T780-580q0 81-40.5 150T630-320H330Zm24-80h252q45-32 69.5-79T700-580q0-92-64-156t-156-64q-92 0-156 64t-64 156q0 54 24.5 101t69.5 79Zm126 0Z"/></svg>');
     --dark-todo-block-border-color: #6fab98;
     --dark-todo-block-background-color: #23302e;
     --dark-todo-block-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%236fab98"><path d="M680-80q-83 0-141.5-58.5T480-280q0-83 58.5-141.5T680-480q83 0 141.5 58.5T880-280q0 83-58.5 141.5T680-80Zm67-105 28-28-75-75v-112h-40v128l87 87Zm-547 65q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h167q11-35 43-57.5t70-22.5q40 0 71.5 22.5T594-840h166q33 0 56.5 23.5T840-760v250q-18-13-38-22t-42-16v-212h-80v120H280v-120h-80v560h212q7 22 16 42t22 38H200Zm280-640q17 0 28.5-11.5T520-800q0-17-11.5-28.5T480-840q-17 0-28.5 11.5T440-800q0 17 11.5 28.5T480-760Z"/></svg>');
@@ -107,6 +113,9 @@ html {
         --note-block-border-color: var(--light-note-block-border-color);
         --note-block-background-color: var(--light-note-block-background-color);
         --note-block-image: var(--light-note-block-image);
+        --tip-block-border-color: var(--light-tip-block-border-color);
+        --tip-block-background-color: var(--light-tip-block-background-color);
+        --tip-block-image: var(--light-tip-block-image);
         --todo-block-border-color: var(--light-todo-block-border-color);
         --todo-block-background-color: var(--light-todo-block-background-color);
         --todo-block-image: var(--light-todo-block-image);
@@ -143,6 +152,9 @@ html {
         --note-block-border-color: var(--dark-note-block-border-color);
         --note-block-background-color: var(--dark-note-block-background-color);
         --note-block-image: var(--dark-note-block-image);
+        --tip-block-border-color: var(--dark-tip-block-border-color);
+        --tip-block-background-color: var(--dark-tip-block-background-color);
+        --tip-block-image: var(--dark-tip-block-image);
         --todo-block-border-color: var(--dark-todo-block-border-color);
         --todo-block-background-color: var(--dark-todo-block-background-color);
         --todo-block-image: var(--dark-todo-block-image);
@@ -178,6 +190,9 @@ html.light {
     --note-block-border-color: var(--light-note-block-border-color);
     --note-block-background-color: var(--light-note-block-background-color);
     --note-block-image: var(--light-note-block-image);
+    --tip-block-border-color: var(--light-tip-block-border-color);
+    --tip-block-background-color: var(--light-tip-block-background-color);
+    --tip-block-image: var(--light-tip-block-image);
     --todo-block-border-color: var(--light-todo-block-border-color);
     --todo-block-background-color: var(--light-todo-block-background-color);
     --todo-block-image: var(--light-todo-block-image);
@@ -212,6 +227,9 @@ html.dark {
     --note-block-border-color: var(--dark-note-block-border-color);
     --note-block-background-color: var(--dark-note-block-background-color);
     --note-block-image: var(--dark-note-block-image);
+    --tip-block-border-color: var(--dark-tip-block-border-color);
+    --tip-block-background-color: var(--dark-tip-block-background-color);
+    --tip-block-image: var(--dark-tip-block-image);
     --todo-block-border-color: var(--dark-todo-block-border-color);
     --todo-block-background-color: var(--dark-todo-block-background-color);
     --todo-block-image: var(--dark-todo-block-image);
@@ -262,6 +280,7 @@ note-block,
 p,
 pre,
 samp,
+tip-block,
 todo-block,
 ul,
 warning-block {
@@ -303,6 +322,7 @@ decision-block,
 example-block,
 important-block,
 note-block,
+tip-block,
 todo-block,
 warning-block {
     --border-thickness: 0.25em;
@@ -322,6 +342,7 @@ decision-block>:first-child,
 example-block>:first-child,
 important-block>:first-child,
 note-block>:first-child,
+tip-block>:first-child,
 todo-block>:first-child,
 warning-block>:first-child {
     margin-top: 0;
@@ -333,6 +354,7 @@ example-block>:last-child,
 important-block>:last-child,
 note-block>:last-child,
 todo-block>:last-child,
+tip-block>:last-child,
 warning-block>:last-child {
     margin-bottom: 0;
 }
@@ -343,6 +365,7 @@ example-block::before,
 important-block::before,
 note-block::before,
 todo-block::before,
+tip-block::before,
 warning-block::before {
     position: absolute;
     left: -2.5em;
@@ -565,6 +588,20 @@ note-block::before {
 note-block intro-::before {
     content: "Note:";
     color: var(--note-block-border-color);
+}
+
+tip-block {
+    background-color: var(--tip-block-background-color);
+    border-left: var(--border-thickness) solid var(--tip-block-border-color);
+}
+
+tip-block::before {
+    background-image: var(--tip-block-image);
+}
+
+tip-block intro-::before {
+    content: "Tip:";
+    color: var(--tip-block-border-color);
 }
 
 todo-block {
